# mouseg

./: README.md  west.yml
app/: CMakeLists.txt  app.overlay  prj.conf
app/src/: battery.c  battery.h  business_logic.c  encoder.c  main.c  switch.c  switch.h
